<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/form_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.ailk.mobile.channel.widget.TitleBar android:id="@id/titlebar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/titlebar">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:background="@drawable/form_back" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip">
                    <TextView android:textSize="15.0sp" android:textColor="@color/form_text" android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/form_phoneno" android:layout_weight="2.0" />
                    <com.ailk.mobile.channel.widget.EditTextCustom android:textColor="@color/form_text" android:id="@id/phone_no" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/form_phoneno_comments" android:maxEms="16" android:singleLine="true" android:layout_weight="1.0" android:inputType="phone" />
                </LinearLayout>
                <ImageView android:background="#ffcbd1d9" android:layout_width="fill_parent" android:layout_height="0.5dip" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip">
                    <TextView android:textSize="15.0sp" android:textColor="@color/form_text" android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/form_card_type" android:layout_weight="2.0" />
                    <EditText android:textColor="@color/form_text" android:id="@id/card_type" android:background="@null" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/form_card_type_comments" android:singleLine="true" android:drawableRight="@drawable/spinner" android:layout_weight="1.0" />
                </LinearLayout>
                <ImageView android:background="#ffcbd1d9" android:layout_width="fill_parent" android:layout_height="0.5dip" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip">
                    <TextView android:textSize="15.0sp" android:textColor="@color/form_text" android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/form_card_no" android:layout_weight="2.0" />
                    <com.ailk.mobile.channel.widget.EditTextCustom android:textColor="@color/form_text" android:id="@id/cardNo" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/form_card_no_comments" android:singleLine="true" android:layout_weight="1.0" />
                </LinearLayout>
                <ImageView android:background="#ffcbd1d9" android:layout_width="fill_parent" android:layout_height="0.5dip" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip">
                    <TextView android:textSize="15.0sp" android:textColor="@color/form_text" android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/form_name" android:layout_weight="2.0" />
                    <com.ailk.mobile.channel.widget.EditTextCustom android:textColor="@color/form_text" android:id="@id/name" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/form_name_comments" android:singleLine="true" android:layout_weight="1.0" />
                </LinearLayout>
                <ImageView android:background="#ffcbd1d9" android:layout_width="fill_parent" android:layout_height="0.5dip" />
                <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                    <TextView android:textSize="15.0sp" android:textColor="@color/form_text" android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/form_gender" android:layout_weight="2.0" />
                    <RadioGroup android:orientation="horizontal" android:id="@id/gender_radioGroup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <RadioButton android:textColor="@color/black" android:gravity="left" android:id="@id/gender_male" android:background="@drawable/bg_radio_form" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/form_gender_male" android:drawablePadding="10.0dip" android:layout_weight="3.0" />
                        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="5.0" />
                        <RadioButton android:textColor="@color/black" android:gravity="left" android:id="@id/gender_famale" android:background="@drawable/bg_radio_form" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/form_gender_famale" android:drawablePadding="10.0dip" android:layout_weight="3.0"  />
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                    <TextView android:textSize="15.0sp" android:textColor="@color/form_text" android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/form_ethnic" android:layout_weight="2.0" />
                    <com.ailk.mobile.channel.widget.EditTextCustom android:textColor="@color/form_text" android:id="@id/ethnic" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/form_ethnic_comments" android:singleLine="true" android:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                    <TextView android:textSize="15.0sp" android:textColor="@color/form_text" android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/form_birthday" android:layout_weight="2.0" />
                    <com.ailk.mobile.channel.widget.EditTextCustom android:textColor="@color/form_text" android:id="@id/date" android:background="@null" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/form_birthday_comments" android:singleLine="true" android:drawableRight="@drawable/date_icon" android:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip">
                    <TextView android:textSize="15.0sp" android:textColor="@color/form_text" android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/form_address" android:layout_weight="2.0" />
                    <com.ailk.mobile.channel.widget.EditTextCustom android:textColor="@color/form_text" android:gravity="top|left|center" android:id="@id/address" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/form_address_comments" android:maxLines="3" android:minLines="2" android:maxLength="100" android:layout_weight="1.0" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="5.0dip">
                <Button android:textColor="@color/dark_orange" android:id="@id/submit" android:background="@drawable/bg_orange_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/form_submit" android:layout_weight="3.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
