<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E0E0E0"
    
    android:scrollbars="vertical">
<LinearLayout 
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical" android:background="#E0E0E0">
	<RelativeLayout  
		android:gravity="center_horizontal"
		android:layout_width="fill_parent" android:layout_height="50dip"
		>
		<TextView 
		android:layout_alignParentTop="true"
		android:layout_width="fill_parent" android:textColor="#565656"
		android:layout_height="50dip" android:layout_gravity="center"
		android:background="@drawable/umeng_analyse_feedback_bar_bg" 
		android:layout_alignParentBottom="true"/>
		<TextView android:layout_alignParentTop="true"
		android:layout_width="fill_parent" android:textColor="#565656"
		android:layout_marginLeft="50dip"
		android:layout_marginRight="50dip"
		android:layout_height="50dip" android:layout_gravity="center"
		android:gravity="center|center" android:text="@string/form_title" style="@style/recent_list_item_name"
		/>
		
		</RelativeLayout>
	<TextView 
		android:layout_width="wrap_content" android:textColor="#565656"
		android:layout_marginTop="5dip"
		android:layout_marginLeft="5dip"
		android:layout_height="40dip" android:layout_gravity="left"
		android:gravity="center" android:text="@string/form_phoneno" style="@style/recent_list_item_name"
		/>
	<EditText android:id="@+id/tel"
		android:layout_width="fill_parent" android:textColor="#565656"
		android:singleLine="true"
		android:inputType="number"
		android:maxLength="11"
		android:layout_marginTop="5dip"
		android:layout_marginLeft="5dip"
		android:layout_height="40dip" android:layout_gravity="left"
		android:gravity="left" android:text="" style="@style/recent_list_item_name"
	>
	</EditText>
	<TextView 
		android:layout_width="wrap_content" android:textColor="#565656"
		android:layout_marginTop="5dip"
		android:layout_marginLeft="5dip"
		android:layout_height="40dip" android:layout_gravity="left"
		android:gravity="center" android:text="@string/form_name" style="@style/recent_list_item_name"
		/>
	<EditText android:id="@+id/name"
		android:layout_width="fill_parent" android:textColor="#565656"
		android:singleLine="true"
		android:layout_marginTop="5dip"
		android:layout_marginLeft="5dip"
		android:layout_height="40dip" android:layout_gravity="left"
		android:gravity="left" android:text="" style="@style/recent_list_item_name"
	>
		</EditText>
	<TextView 
		android:layout_width="wrap_content" android:textColor="#565656"
		android:layout_marginTop="5dip"
		android:layout_marginLeft="5dip"
		android:layout_height="40dip" android:layout_gravity="left"
		android:gravity="center" android:text="@string/form_card" style="@style/recent_list_item_name"
		/>
	<EditText android:id="@+id/number"
		android:layout_width="fill_parent" android:textColor="#565656"
		android:singleLine="true"
		android:inputType="number"
		android:maxLength="18"
		android:layout_marginTop="5dip"
		android:layout_marginLeft="5dip"
		android:layout_height="40dip" android:layout_gravity="left"
		android:gravity="left" android:text="" style="@style/recent_list_item_name"
	>
	</EditText>
	<TextView
		android:layout_width="wrap_content" android:textColor="#565656"
		android:layout_marginTop="5dip"
		android:layout_marginLeft="5dip"
		android:layout_height="40dip" android:layout_gravity="left"
		android:gravity="center" android:text="@string/confirm_address" style="@style/recent_list_item_name"
		/>
	<EditText android:id="@+id/address"
		android:layout_width="fill_parent" android:textColor="#565656"
		android:singleLine="true"
		android:layout_marginTop="5dip"
		android:layout_marginLeft="5dip"
		android:layout_height="40dip" android:layout_gravity="left"
		android:gravity="left" android:text="" style="@style/recent_list_item_name"
	>
	</EditText>
	<Button 
			android:gravity="center"
		android:layout_marginTop="10dip"
		android:layout_marginBottom="10dip"
			android:layout_width="fill_parent" android:paddingLeft="15dip" android:paddingRight="15dip" android:layout_height="30dip"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:text="@string/form_submit"
			android:background="@drawable/umeng_analyse_submit_selector"
			android:textColor="#FFFFFF" />
	
	
</LinearLayout>
</ScrollView>