<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffeff2f5" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.wj.sell3.ui.TitleBar android:id="@id/titlebar" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/text_blue" android:gravity="center" android:background="@drawable/form_back" android:paddingLeft="30.0dip" android:paddingTop="50.0dip" android:paddingRight="30.0dip" android:paddingBottom="50.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/result_ok" android:drawableLeft="@drawable/icon_ok" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <Button android:textColor="@color/dark_orange" android:id="@id/back_redo" android:background="@drawable/bg_orange_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/redo" android:onClick="queryXiaoShouToday" android:layout_weight="3.0" />
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="5.0" />
                <Button android:textColor="@color/text_blue" android:id="@id/back_index" android:background="@drawable/bg_gray_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/toIndex" android:onClick="queryCancel"  android:layout_weight="3.0" />
            </LinearLayout>
            <TextView android:layout_width="fill_parent" android:layout_height="150.0dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
